@@ -64,6 +64,50 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
                 });
     }
 
+    @Test
+    void shouldReturnCivilCaseworkerMappingsForSeniorTribunalCaseworker() {
+
+        judicialAccessProfiles.clear();
+        judicialOfficeHolders.clear();
+
+        CaseWorkerAccessProfile cap = UserAccessProfileBuilder.buildUserAccessProfileForRoleId3();
+        cap.setServiceCode("AAA6");
+        cap.setSuspended(false);
+        cap.setRegionId("region1");
+        cap.setTaskSupervisorFlag("Y");
+        cap.setCaseAllocatorFlag("Y");
+        allProfiles.add(cap);
+
+        //Execute Kie session
+        List<RoleAssignment> roleAssignments =
+                buildExecuteKieSession(getFeatureFlags("civil_wa_1_0", true));
+
+        //assertion
+        assertFalse(roleAssignments.isEmpty());
+        assertEquals(4, roleAssignments.size());
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+                containsInAnyOrder("senior-tribunal-caseworker", "hmcts-legal-operations", "task-supervisor",
+                        "case-allocator"));
+        roleAssignments.forEach(r -> {
+            assertEquals("LEGAL_OPERATIONS", r.getRoleCategory().toString());
+            assertEquals("ORGANISATION", r.getRoleType().toString());
+        });
+
+        roleAssignments.stream().filter(c -> c.getGrantType().equals(GrantType.STANDARD)).collect(Collectors.toList())
+                .forEach(r -> {
+                    assertEquals("CIVIL", r.getAttributes().get("jurisdiction").asText());
+                    if ("senior-tribunal-caseworker".equals(r.getRoleName())) {
+                        assertEquals("decision_making_work,access_requests",
+                                r.getAttributes().get("workTypes").asText());
+                    } else {
+                        assertEquals("routine_work", r.getAttributes().get("workTypes").asText());
+                    }
+                    assertEquals("region1", r.getAttributes().get("region").asText());
+                    assertEquals(cap.getPrimaryLocationId(), r.getAttributes().get("primaryLocation").asText());
+                });
+    }
+
+
     static Stream<Arguments> generateData() {
         return Stream.of(
                 Arguments.of("3", Arrays.asList("hmcts-admin", "hearing-centre-team-leader"),
@@ -74,8 +118,10 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
                         3, Arrays.asList("routine_work,access_requests", "routine_work,access_requests")),
                 Arguments.of("4", Arrays.asList("hmcts-admin", "hearing-centre-admin"),
                         2, Collections.singletonList("hearing_work")),
+                Arguments.of("1", Arrays.asList("senior-tribunal-caseworker","hmcts-legal-operations"),
+                        2, List.of("decision_making_work,access_requests")),
                 Arguments.of("2", Arrays.asList("tribunal-caseworker","hmcts-legal-operations"),
-                        2, Arrays.asList("decision_making_work")),
+                        2, List.of("decision_making_work")),
                 Arguments.of("6", Arrays.asList("hmcts-admin", "ctsc-team-leader", "nbc-team-leader"),
                         3, Arrays.asList("routine_work,access_requests", "routine_work,access_requests")),
                 Arguments.of("11", Arrays.asList("hmcts-admin","ctsc","national-business-centre"),
@@ -109,9 +155,7 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
         assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
                 containsInAnyOrder(roleNames.toArray()));
 
-        roleAssignments.forEach(r -> {
-            assertEquals("ORGANISATION", r.getRoleType().toString());
-        });
+        roleAssignments.forEach(r -> assertEquals("ORGANISATION", r.getRoleType().toString()));
 
         roleAssignments.stream().filter(c -> c.getGrantType().equals(GrantType.STANDARD)).toList()
                 .forEach(r -> {
